fixes #1324
